<resources>
    <string name="app_name" translatable="false">Teatre Mallorca</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    
    <string name="playList">Show List</string>
    <string name="deleteShow">Delete Show</string>
    <string name="title">"Title: "</string>
    <string name="date">"Date: "</string>
    <string name="tickets">"Nº Tickets: "</string>
    <string name="total" translatable="false">"Total: "</string>
    <string name="purchaseTitle">Purchase</string>
    <string name="purchaseTextConfirm">Please, complete the next information:</string>
    <string name="email" translatable="false">"e-mail: "</string>
    <string name="name">"Name: "</string>
    <string name="lastName">"Last name: "</string>
    <string name="confirmButton">Confirm</string>
    <string name="selectShowForDelete">Select from the list what show do you want to delete</string>
    <string name="delete">Delete</string>
    <string name="mon">Monday</string>
    <string name="tue">Tuesday</string>
    <string name="wed">Wednesday</string>
    <string name="thu">Thursday</string>
    <string name="fri">Friday</string>
    <string name="sat">Saturday</string>
    <string name="sun">Sunday</string>
    <string name="statTitle">Statistics</string>
    <string name="statText">No information</string>
    <string name="statDayText">0 tickets</string>
    <string name="legend">Legend</string>
    <string name="moreTickets">+ tickets</string>
    <string name="lessTickets">- tickets</string>
    <string name="blankText" translatable="false">Blank text</string>
    <string name="description">"Description: "</string>
    <string name="duration">"Duration: "</string>
    <string name="price">"Price: "</string>
    <string name="availableSeats">"Available seats: "</string>
    <string name="selectSeats">"Select seats: "</string>
    <string name="estimated">Est. income</string>
    <string name="selectShow">Select show</string>
    <string name="selectDate">"Select a date for "</string>
    <string name="purchaseOk">Purchase OK</string>
    <string name="purchaseNeedMail">email is required</string>
    <string name="bundleTitle" translatable="false">Title</string>
    <string name="bundleDate" translatable="false">Date</string>
    <string name="bundleDayOfTheWeek" translatable="false">DayOfTheWeek</string>
    <string name="bundleTickets" translatable="false">Tickets</string>
    <string name="bundleTotal" translatable="false">Total</string>
    <string name="bundlePlaces" translatable="false">Places</string>
    <string name="bundleSeats" translatable="false">Seats</string>
    <string name="bundleOption" translatable="false">Option</string>
    <string name="bundleHold" translatable="false">Hold</string>
    <string name="bundleAvailable" translatable="false">Available</string>
    <string name="back">Back</string>
    <string name="yes">Yes</string>
    <string name="no" translatable="false">No</string>
    <string name="notImplemented">Not implementet (yet)</string>
    <string name="noSessions">No sessions</string>
    <string name="deleteWarning">Delete Warning</string>
    <string name="showNeeded">You must to select a show</string>
    <string name="deleteFunction">Delete fuction</string>
    <string name="deleteFunctionWarning">Delete function warning</string>
    <string name="bundlePrice" translatable="false">Price</string>
    <string name="bundleDuration" translatable="false">Duration</string>
    <string name="bundleDescription" translatable="false">Description</string>
    <string name="expiredSession">This session has expired</string>
    <string name="noPlaces">This session is full</string>
    <string name="selectOneDate">Select a date</string>
    <string name="mustSelectDate">You must select a date</string>
    <string name="alreadyExistsShow">Already exists a show whith this date</string>
    <string name="newDateAdded">New date added</string>
    <string name="wrongDates">Wrong dates</string>
    <string name="noSessionsAdded">Not possible add sessions in this range</string>
    <string name="added">"Added "</string>
    <string name="dates">" dates"</string>
    <string name="mustSelectStartFinish">You must select start and finish dates</string>
    <string name="atLeastOneDay">Select at least one day</string>
    <string name="atLeastOneSeat">Select at least one seat</string>
    <string name="discountApply">Discount apply</string>
    <string name="discountCard">If you have a discount card, You have 30% discount</string>
    <string name="yesIHaveIt">"     Yes, I have it"</string>
    <string name="noHavent">No, I haven\'t</string>
</resources>
